--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   "author": "SpyFu",
   "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nyc mocha",
     "build": "rollup -c"
   },
   "devDependencies": {
+    "chai": "^4.0.2",
+    "mocha": "^3.4.2",
+    "nyc": "^11.0.2",
     "rollup": "^0.43.0",
     "vue": "^2.3.4",
     "vuex": "^2.3.1"
