--- a/package.json
+++ b/package.json
@@ -1,20 +1,47 @@
 {
   "name": "vuex-helpers",
   "version": "0.1.0",
-  "description": "Vuex utility functions",
-  "main": "src/main.js",
-  "repository": "git@github.com:spyfu/vuex-helpers.git",
+  "description": "Utility functions for Vuex.",
+  "main": "dist/vuex-helpers.js",
+  "module": "dist/vuex-helpers.mjs",
+  "jsnext:main": "dist/vuex-helpers.mjs",
+  "scripts": {
+    "prebuild": "eslint lib test",
+    "build": "rollup -c --environment BUILD:production",
+    "watch": "rollup -c -w",
+    "pretest": "rollup -c",
+    "test": "mocha",
+    "prepublish": "npm test"
+  },
+  "repository": "spyfu/vuex-helpers",
+  "keywords": [
+    "vuex"
+  ],
   "author": "SpyFu",
   "license": "MIT",
-  "scripts": {
-    "test": "nyc mocha",
-    "build": "rollup -c"
+  "bugs": {
+    "url": "https://github.com/spyfu/vuex-helpers/issues"
   },
+  "files": [
+    "lib",
+    "dist"
+  ],
+  "homepage": "https://github.com/spyfu/vuex-helpers",
+  "dependencies": {},
   "devDependencies": {
-    "chai": "^4.0.2",
-    "mocha": "^3.4.2",
-    "nyc": "^11.0.2",
-    "rollup": "^0.43.0",
+    "babel-eslint": "^7.1.1",
+    "babel-plugin-external-helpers": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-register": "^6.18.0",
+    "babelrc-rollup": "^3.0.0",
+    "browser-env": "^2.0.31",
+    "eslint": "^3.12.2",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.2.0",
+    "rollup": "^0.37.0",
+    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-istanbul": "^1.1.0",
+    "rollup-watch": "^2.5.0",
     "vue": "^2.3.4",
     "vuex": "^2.3.1"
   }
