--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-register": "^6.18.0",
     "babelrc-rollup": "^3.0.0",
     "browser-env": "^2.0.31",
+    "chai": "^4.0.2",
     "eslint": "^3.12.2",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
@@ -42,6 +43,7 @@
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-istanbul": "^1.1.0",
     "rollup-watch": "^2.5.0",
+    "sinon": "^2.3.5",
     "vue": "^2.3.4",
     "vuex": "^2.3.1"
   }
