--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "jsnext:main": "dist/vuex-helpers.mjs",
   "scripts": {
     "prebuild": "eslint lib test",
-    "build": "rollup -c --environment BUILD:production",
+    "build": "rollup -c --environment NODE_ENV:production",
     "watch": "rollup -c -w",
     "pretest": "rollup -c",
     "test": "mocha",
@@ -42,6 +42,7 @@
     "rollup": "^0.37.0",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-istanbul": "^1.1.0",
+    "rollup-plugin-uglify": "^2.0.1",
     "rollup-watch": "^2.5.0",
     "sinon": "^2.3.5",
     "vue": "^2.3.4",
