Restore pretest build

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prebuild": "eslint lib test",
     "build": "rollup -c --environment NODE_ENV:production",
     "watch": "rollup -c -w",
+    "pretest": "npm run build",
     "test": "mocha",
     "prepublish": "npm test"
   },
