--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "prebuild": "eslint lib test",
     "build": "rollup -c --environment NODE_ENV:production",
     "watch": "rollup -c -w",
-    "pretest": "npm run build",
-    "test": "mocha",
+    "pretest": "rollup -c",
+    "test": "nyc mocha",
     "prepublish": "npm test"
   },
   "repository": "spyfu/spyfu-vuex-helpers",
@@ -39,6 +39,7 @@
     "eslint": "^3.12.2",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
+    "nyc": "^11.0.3",
     "rollup": "^0.37.0",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-istanbul": "^1.1.0",
