--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
   "jsnext:main": "dist/spyfu-vuex-helpers.esm.js",
   "scripts": {
     "prebuild": "eslint lib test",
-    "build": "rollup -c --environment NODE_ENV:production",
+    "build": "cross-env NODE_ENV=production rollup -c",
     "watch": "rollup -c -w",
-    "pretest": "rollup -c",
-    "test": "mocha",
+    "test": "cross-env NODE_ENV=test mocha",
     "prepublish": "npm test"
   },
   "repository": "spyfu/spyfu-vuex-helpers",
@@ -31,15 +30,16 @@
   "devDependencies": {
     "babel-eslint": "^7.1.1",
     "babel-plugin-external-helpers": "^6.18.0",
+    "babel-plugin-istanbul": "^4.1.4",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
     "babelrc-rollup": "^3.0.0",
     "browser-env": "^2.0.31",
     "chai": "^4.0.2",
+    "cross-env": "^5.0.1",
     "eslint": "^3.12.2",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
-    "nyc": "^11.0.3",
     "rollup": "^0.37.0",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-istanbul": "^1.1.0",
