--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-eslint": "^8.0.1",
     "babel-plugin-external-helpers": "^6.18.0",
     "babel-plugin-istanbul": "^4.1.5",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
     "babelrc-rollup": "^3.0.0",
